--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,12 @@
 <!-- Formularz dodawania nowego użytkownika -->
 <form #f="ngForm" (ngSubmit)="addData(f)">
-  <input type="text" name="name" ngModel />
+  <input type="text" name="firstname" ngModel placeholder="First Name" />
   <br />
-  <input type="email" name="email" ngModel />
+  <input type="text" name="lastname" ngModel placeholder="Last Name" />
   <br />
-  <input type="password" name="password" ngModel />
+  <input type="email" name="email" ngModel placeholder="Email" />
+  <br />
+  <input type="password" name="password" ngModel placeholder="Password" />
   <br />
   <button type="submit">Save data</button>
 </form>
@@ -12,7 +14,7 @@
 <!-- Wyświetlanie użytkowników -->
 <ul>
   <li *ngFor="let data of users$ | async">
-    {{ data.name }} / {{ data.email }} / {{ data.id }}
+    {{ data.firstname }} {{ data.lastname }} / {{ data.email }} / {{ data.id }}
     <button (click)="updateUser(data)">Update</button>
     <button (click)="deleteUser(data.id)">Delete</button>
   </li>
@@ -25,13 +27,33 @@
   (ngSubmit)="submitUpdate(updateForm)"
 >
   <input type="hidden" name="id" [(ngModel)]="selectedUser.id" />
-  <input type="text" name="name" [(ngModel)]="selectedUser.name" />
+  <input
+    type="text"
+    name="firstname"
+    [(ngModel)]="selectedUser.firstname"
+    placeholder="First Name"
+  />
   <br />
-  <input type="email" name="email" [(ngModel)]="selectedUser.email" />
+  <input
+    type="text"
+    name="lastname"
+    [(ngModel)]="selectedUser.lastname"
+    placeholder="Last Name"
+  />
   <br />
-  <input type="password" name="password" [(ngModel)]="selectedUser.password" />
+  <input
+    type="email"
+    name="email"
+    [(ngModel)]="selectedUser.email"
+    placeholder="Email"
+  />
+  <br />
+  <input
+    type="password"
+    name="password"
+    [(ngModel)]="selectedUser.password"
+    placeholder="Password"
+  />
   <br />
   <button type="submit">Update User</button>
 </form>
-
-<router-outlet></router-outlet>
