--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,1 +1,66 @@
-<p>home works!</p>
+<div class="menu-list">
+  <a routerLink="/schedule-visit">Umów wizytę</a>
+  <a routerLink="/visit-history">Historia wizyt</a>
+  <a routerLink="/visits">Wizyty</a>
+  <a routerLink="/specialists">Specjaliści</a>
+</div>
+
+<!-- Formularz dodawania nowego użytkownika
+<form #f="ngForm" (ngSubmit)="addData(f)">
+  <input type="text" name="firstname" ngModel placeholder="First Name" />
+  <br />
+  <input type="text" name="lastname" ngModel placeholder="Last Name" />
+  <br />
+  <input type="email" name="email" ngModel placeholder="Email" />
+  <br />
+  <input type="password" name="password" ngModel placeholder="Password" />
+  <br />
+  <button type="submit">Save data</button>
+</form> -->
+
+<!-- Wyświetlanie użytkowników
+<ul>
+  <li *ngFor="let data of doctors$ | async">
+    {{ data.id }}
+    <button (click)="updateData(data)">Update</button>
+    <button (click)="deleteData(data.id)">Delete</button>
+  </li>
+</ul> -->
+
+<!-- Formularz aktualizacji użytkownika -->
+<!-- <form
+  *ngIf="selectedUser"
+  #updateForm="ngForm"
+  (ngSubmit)="submitUpdate(updateForm)"
+>
+  <input type="hidden" name="id" [(ngModel)]="selectedUser.id" />
+  <input
+    type="text"
+    name="firstname"
+    [(ngModel)]="selectedUser.firstname"
+    placeholder="First Name"
+  />
+  <br />
+  <input
+    type="text"
+    name="lastname"
+    [(ngModel)]="selectedUser.lastname"
+    placeholder="Last Name"
+  />
+  <br />
+  <input
+    type="email"
+    name="email"
+    [(ngModel)]="selectedUser.email"
+    placeholder="Email"
+  />
+  <br />
+  <input
+    type="password"
+    name="password"
+    [(ngModel)]="selectedUser.password"
+    placeholder="Password"
+  />
+  <br />
+  <button type="submit">Update User</button>
+</form> -->
