--- a/src/app/components/visit-details/visit-details.component.html
+++ b/src/app/components/visit-details/visit-details.component.html
@@ -13,7 +13,7 @@
   </div>
   <div class="info-container">
     <label>Data:</label>
-    <input type="date" [(ngModel)]="visit.day" [disabled]="!editable" />
+    <input type="date" [(ngModel)]="visitDate" [disabled]="!editable" />
   </div>
   <div class="info-container">
     <label>Godzina rozpoczęcia:</label>
