--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -12,6 +12,10 @@ header {
     font-weight: bold;
   }
 
+  .header-logo {
+    width: 100px;
+  }
+
   .auth-buttons {
     display: flex;
     gap: 10px;
